fix: background and foreground colors do not have a sufficient contrast ratio

--- a/practices/practice-one/src/assets/stylesheets/abstracts/_variables.scss
+++ b/practices/practice-one/src/assets/stylesheets/abstracts/_variables.scss
@@ -105,7 +105,7 @@ $box-shadow-card-box: rgba(0, 0, 0, 0.1);
 /* Book */
 $text-book-title: 14px;
 $text-book-results: 15px;
-$color-book-title: #0d75ff;
+$color-book-title: #14282f;
 $color-book-results: #222531;
 $bg-color-book-title: rgba(13, 117, 255, 0.05);
 
@@ -116,20 +116,20 @@ $text-category-shorthand: 16px;
 $color-category-item: #222531;
 $color-category-total: $color-filter;
 $text-category-total: 12px;
-$bg-color-category-All: #5bc0de;
-$bg-color-category-Adventure: #ff6231;
-$bg-color-category-Contemporary: #0da8ff;
-$bg-color-category-Romance: #f388b5;
+$bg-color-category-All: #14282f;
+$bg-color-category-Adventure: #c13003;
+$bg-color-category-Contemporary: #0f5f8d;
+$bg-color-category-Romance: #a44169;
 $bg-color-category-Fantasy: #770dff;
-$bg-color-category-Dystopian: #4f85ac;
+$bg-color-category-Dystopian: #325c7c;
 $bg-color-category-Mystery: #14282f;
-$bg-color-category-Horror: #f1121f;
-$bg-color-category-Thriller: #0d8bff;
-$bg-color-category-Paranormal: #ffd80d;
-$bg-color-category-Historical: #75828a;
+$bg-color-category-Horror: #b30b11;
+$bg-color-category-Thriller: #0c6ac7;
+$bg-color-category-Paranormal: #77681b;
+$bg-color-category-Historical: #636c72;
 $bg-color-category-Scifi: #6f5a8a;
-$bg-color-category-Memoir: #94aae4;
-$bg-color-category-Sports: #b4bebf;
+$bg-color-category-Memoir: #667498;
+$bg-color-category-Sports: #6d6f6f;
 
 /* Filter */
 $text-filter-title: 15px;
