--- a/practices/practice-one/src/assets/stylesheets/components/_card.scss
+++ b/practices/practice-one/src/assets/stylesheets/components/_card.scss
@@ -32,6 +32,5 @@
   &-published {
     font-family: $font-family-card-author;
     font-weight: $font-weight-card-author;
-    color: $color-card-author;
   }
 }
